src/styles.css
.container {
    display: flex;
    flex-direction: column;
}

li:hover {
    background-color: slateblue;
    opacity: .8;
}

body {
    display: grid;
    grid-template: 1fr / 1fr 3fr;
}

.project-list {
    display: flex;
    flex-direction: column;
    grid-area: 1 / 1 / 3 / 2;
    width: 100%;
    background-color: slategray;
}

.new-project-button {
    background-color: aqua;
    padding: 12px;
    margin: 24px;
}

.selected-item {
    grid-area: 1 / 2 / 3 / 3;
    padding: 24px;
}

.modal {
    margin: auto;
}

.modal::backdrop {
    /* background: linear-gradient(180deg, black, rgb(252, 220, 161)); */
    background-color: black;
    opacity: .4;
}

.new-to-do-button {
    visibility: hidden;
}

